--- a/worblehat-web/src/main/resources/templates/home.html
+++ b/worblehat-web/src/main/resources/templates/home.html
@@ -10,6 +10,7 @@
     <li><a th:href="@{/bookList}">Show all Books</a></li>
     <li><a th:href="@{/insertBooks}">Add a new book</a></li>
     <li><a th:href="@{/borrow}">Borrow Book</a></li>
+    <li><a th:href="@{/myBorrowedBooks}">My Borrowed Book</a></li>
     <li><a th:href="@{/returnAllBooks}">Return all Books</a></li>
 </ul>
 </body>
